--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -14,7 +14,6 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  background-image: url("background.png");
   font-family: var(--font-default);
   font-size: 18px;
   max-width: 1300px;
@@ -529,12 +528,32 @@ footer {
   }
 }
 
+/*
+Les bordures des champs de saisies changent de couleurs: 
+Rouge pour invalides,
+Vert pour valides
+*/
+
+input:required {
+  border: 2px solid #279e7a;
+  border-radius: 0.2em;
+  padding-right: 5px;
+}
+
 input:invalid {
   border: 2px solid red;
   border-radius: 0.2em;
   padding-right: 5px;
 }
 
-.checkboxesStyle {
-  background-color: red;
+.locationError {
+  font-size: 16px;
+  font-weight: 900;
+}
+
+.conditionError {
+  font-size: 16px;
+  display: block;
+  padding-top: 10px;
+  font-weight: 900;
 }
