--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -533,23 +533,9 @@ footer {
 Les bordures des champs de saisies changent de couleurs: 
 Rouge pour invalides,
 Vert pour valides
-
-input:required {
-  border: 2px solid #279e7a;
-  border-radius: 0.2em;
-  padding-right: 5px;
-}
-
-input:invalid {
-  border: 2px solid red;
-  border-radius: 0.2em;
-  padding-right: 5px;
-}
-
-
 */
 
-.valid {
+.validInput {
   border: 2px solid #279e7a;
   outline: none;
   margin: 0;
@@ -560,7 +546,7 @@ input:invalid {
   height: 48px;
 }
 
-.invalid {
+.invalidInput {
   border: 2px solid #fe142f;
   outline: none;
   margin: 0;
