--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -480,7 +480,7 @@ footer {
   padding-right: 2vw;
   margin: 0 20px;
 }
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 998px) {
   .hero-section {
     display: block;
     box-shadow: unset;
@@ -516,6 +516,12 @@ footer {
   .copyrights {
     margin-top: 50px;
     text-align: center;
+  }
+}
+
+@media screen and (max-width: 998px) {
+  .hero-headline {
+    font-size: 3rem;
   }
 }
 
