--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -519,9 +519,23 @@ footer {
   }
 }
 
-@media screen and (max-width: 998px) {
+@media screen and (max-width: 800px) {
   .hero-headline {
-    font-size: 3rem;
+    font-size: 3.5rem;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .hero-content {
+    padding: 0px;
+    min-width: 224px;
+  }
+  .hero-headline {
+    font-size: 2.2rem;
+  }
+
+  .hero-text {
+    margin-top: 37px;
   }
 }
 
